# ServiceChecker

./: pyproject.toml
doc/: .conf.py.un~  conf.py  conf.py~
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/doctrees/rst/: config.doctree  model.doctree  modules.doctree  wShellCmd.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/rst/: modules.rst.txt
doc/_build/html/rst/: config.html  model.html  modules.html  wShellCmd.html
doc/rst/: modules.rst  wShellCmd.rst
src/: __main__.py  config.py  election_score.py  init_server.py  model.py  ps_shell.py  wShellCmd.py
